chore: use getFirst() instead of get(0) in AccountRepositoryTest.java